add delete department and get all hospitals endpoints